bin/testsuite/tests/compiler/src/errors/compiler4992.swg
#global testerror "Err0348"

#test
{
    if #defined "titi"
    {
    }
}